# path-server

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yaml  test.yaml
extensions/vscode/: package-lock.json  package.json
extensions/zed/: Cargo.toml  extension.toml
src/: config.rs  editor_info.rs  lib.rs  server.rs  server_info.rs
src/document/: language.rs  mod.rs
src/parser/path/: mod.rs  regex.rs
src/parser/tree_sitter/: mod.rs
src/providers/: document_link.rs
src/resolver/: collect.rs  mod.rs
