[package]
name = "path-server"
version = "1.1.2"
edition = "2024"
description = "A fast and lightweight language server for path completion."
license = "Apache-2.0"
repository = "https://github.com/kunlinglio/path-server"
readme = "README.md"

[features]
multi-thread = ["tokio/rt-multi-thread"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
config = "0.15.22"
futures = "0.3.32"
globset = "0.4.18"
hf = "0.6.0"
line-index = "0.1.2"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = "0.28.0"
strum_macros = "0.28.0"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = [
    "fs",
    "macros",
    "rt",
    "sync",
    "io-std",
] }
tower-lsp-server = "0.23.0"
tree-sitter = "0.26.7"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-dockerfile-updated = "0.2.0"
tree-sitter-html = "0.23.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-md = "0.5.3"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.1"
tree-sitter-typescript = "0.23.2"

[dev-dependencies]
tempfile = "3.27.0"
