[package]
name = "path-server"
version = "1.1.2"
edition = "2024"
license = "Apache-2.0"
description = "Path Intellisense like extension for zed, provides fast, real-time file path autocompletion powered by Path Server."
repository = "https://github.com/kunlinglio/path-server"
readme = "../../README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.7.0"
